--- a/font-end/package.json
+++ b/font-end/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "font-awesome": "^4.7.0",
+    "github-markdown-css": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.1",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^8.2.0",
+    "redux-state-sync": "^3.1.2",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
     "remark-gfm": "^3.0.1",
