--- a/font-end/package.json
+++ b/font-end/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "firebase": "^9.6.10",
     "font-awesome": "^4.7.0",
     "github-markdown-css": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.1",
+    "react-modal": "^3.14.4",
     "react-player": "^2.10.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
