--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "multer": "^1.4.4",
