--- a/font-end/package.json
+++ b/font-end/package.json
@@ -15,8 +15,10 @@
     "firebase": "^9.6.10",
     "font-awesome": "^4.7.0",
     "github-markdown-css": "^5.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-markdown": "^8.0.1",
     "react-modal": "^3.14.4",
     "react-player": "^2.10.0",
